--- a/public/themes/admin/default/admin/statistics/wish.html
+++ b/public/themes/admin/default/admin/statistics/wish.html
@@ -1,43 +1,187 @@
 <include file="public@header"/>
 </head>
 <body>
-<div class="wrap">
+<div class="wrap js-check-wrap">
     <ul class="nav nav-tabs">
-        <li class="active"><a>心愿实现列表</a></li>
+        <if condition="$status eq 0">
+            <li class="active"><a href="{:url('Statistics/wish', array('status'=>0))}">未认领心愿列表</a></li>
+            <li><a href="{:url('Statistics/wish', array('status'=>1))}">已认领心愿列表</a></li>
+        <else/>
+            <li><a href="{:url('Statistics/wish', array('status'=>0))}">未认领心愿列表</a></li>
+            <li class="active"><a href="{:url('Statistics/wish', array('status'=>1))}">已认领心愿列表</a></li>
+        </if>
     </ul>
-    <form method="post" class="js-ajax-form margin-top-20">
-        <table class="table table-hover table-bordered">
-            <thead>
-            <tr>
-                <th>ID</th>
-                <th>心愿名称</th>
-                <th>会员名称</th>
-                <th>实现者姓名</th>
-                <th>实现者手机号</th>
-                <th>消耗积分</th>
-                <th>创建时间</th>
-            </tr>
-            </thead>
-            <tbody>
-                <foreach name="actions" id="vo">
-                    <php>
-                        $more = json_decode($vo['more'], true);
-                    </php>
+    <form class="well form-inline margin-top-20" method="post" action="{:url('Statistics/wish')}">
+        时间:
+        <input type="text" class="form-control js-bootstrap-datetime" name="start_time"
+               value="{$start_time|default=''}"
+               style="width: 140px;" autocomplete="off">-
+        <input type="text" class="form-control js-bootstrap-datetime" name="end_time"
+               value="{$end_time|default=''}"
+               style="width: 140px;" autocomplete="off"> &nbsp; &nbsp;
+        <if condition="$status eq 0">
+            名称:
+            <input type="text" class="form-control" name="keyword" style="width: 200px;"
+                   value="{$keyword|default=''}" placeholder="请输入心愿名称...">
+        <else/>
+            姓名:
+            <input type="text" class="form-control" name="keyword" style="width: 200px;"
+                   value="{$keyword|default=''}" placeholder="请输入兑换者姓名...">
+        </if>
+        <input type="hidden" name="status" value="{$status}">
+        <input type="submit" class="btn btn-primary" value="搜索"/>
+        <if condition="$status eq 1">
+           <a class="btn btn-primary pull-right" href="{:url('Excel/exportWish')}">导出</a>
+        </if>
+    </form>
+    <form class="js-ajax-form" action="" method="post">
+        <if condition="$status eq 0">
+            <table class="table table-hover table-bordered table-list">
+                <thead>
+                <tr>
+                    <th width="50">ID</th>
+                    <th>心愿名称</th>
+                    <th width="130">实现积分</th>
+                    <th width="160">缩率图</th>
+                    <th width="130">发布时间</th>
+                    <th width="130">状态</th>
+                </tr>
+                </thead>
+                <foreach name="actions" item="vo">
                     <tr>
-                        <td>{$vo.id}</td>
-                        <td>{$vo.post_title}</td>
+                        <td><b>{$vo.id}</b></td>
+                        <td>
+                            <a href="" target="_blank">{$vo.post_title}</a>
+                        </td>
+                        <td>{$vo.score}</td>
+                        <td>
+                            <notempty name="vo.more.thumbnail">
+                            <a href="javascript:parent.imagePreviewDialog('{:cmf_get_image_preview_url($vo.more.thumbnail)}');">
+                                <i class="fa fa-photo fa-fw"></i>
+                            </a>
+                        </notempty>
+                        </td>
+                        <td>{:date('Y-m-d H:i', $vo.create_time)}</td>
+                        <td>未认领</td>
+                    </tr>
+                </foreach>
+                <tfoot>
+                <tr>
+                    <th width="50">ID</th>
+                    <th>心愿名称</th>
+                    <th width="130">实现积分</th>
+                    <th width="160">缩率图</th>
+                    <th width="130">发布时间</th>
+                    <th width="130">状态</th>
+                </tr>
+                </tfoot>
+            </table>
+        <else />
+            <table class="table table-hover table-bordered table-list">
+                <thead>
+                <tr>
+                    <th width="50">ID</th>
+                    <th>心愿名称</th>
+                    <th width="130">会员名称</th>
+                    <th width="160">实现者姓名</th>
+                    <th width="160">实现者手机号</th>
+                    <th width="90">消耗积分</th>
+                    <th width="130">创建时间</th>
+                </tr>
+                </thead>
+                <foreach name="actions" item="vo">
+                    <tr>
+                        <td><b>{$vo.id}</b></td>
+                        <td>
+                            <a href="" target="_blank">{$vo.post_title}</a>
+                        </td>
                         <td>{$vo.user_nickname}</td>
-                        <td>{$more.username}</td>
-                        <td>{$more.phone}</td>
+                        <td>{$vo.more.username}</td>
+                        <td>{$vo.more.phone}</td>
                         <td>{$vo.score}</td>
                         <td>{:date('Y-m-d H:i', $vo.create_time)}</td>
                     </tr>
                 </foreach>
-            </tbody>
-        </table>
-        <div class="pagination"></div>
+                <tfoot>
+                <tr>
+                    <th width="50">ID</th>
+                    <th>商品名称</th>
+                    <th width="130">会员名称</th>
+                    <th width="160">兑换者姓名</th>
+                    <th width="160">兑换者手机号</th>
+                    <th width="65">消耗积分</th>
+                    <th width="130">创建时间</th>
+                </tr>
+                </tfoot>
+            </table>
+        </if>
+        <ul class="pagination">{$page|default=''}</ul>
     </form>
 </div>
 <script src="__STATIC__/js/admin.js"></script>
+<script>
+
+    function reloadPage(win) {
+        win.location.reload();
+    }
+
+    $(function () {
+        setCookie("refersh_time", 0);
+        Wind.use('ajaxForm', 'artDialog', 'iframeTools', function () {
+            //批量复制
+            $('.js-articles-copy').click(function (e) {
+                var ids = [];
+                $("input[name='ids[]']").each(function () {
+                    if ($(this).is(':checked')) {
+                        ids.push($(this).val());
+                    }
+                });
+
+                if (ids.length == 0) {
+                    art.dialog.through({
+                        id: 'error',
+                        icon: 'error',
+                        content: '您没有勾选信息，无法进行操作！',
+                        cancelVal: '关闭',
+                        cancel: true
+                    });
+                    return false;
+                }
+
+                ids = ids.join(',');
+                art.dialog.open("__ROOT__/index.php?g=portal&m=AdminArticle&a=copy&ids=" + ids, {
+                    title: "批量复制",
+                    width: "300px"
+                });
+            });
+            //批量移动
+            $('.js-articles-move').click(function (e) {
+                var ids = [];
+                $("input[name='ids[]']").each(function () {
+                    if ($(this).is(':checked')) {
+                        ids.push($(this).val());
+                    }
+                });
+
+                if (ids.length == 0) {
+                    art.dialog.through({
+                        id: 'error',
+                        icon: 'error',
+                        content: '您没有勾选信息，无法进行操作！',
+                        cancelVal: '关闭',
+                        cancel: true
+                    });
+                    return false;
+                }
+
+                ids = ids.join(',');
+                art.dialog.open("__ROOT__/index.php?g=portal&m=AdminArticle&a=move&old_term_id={$term.term_id|default=0}&ids=" + ids, {
+                    title: "批量移动",
+                    width: "300px"
+                });
+            });
+        });
+    });
+</script>
 </body>
 </html>
