--- a/public/themes/admin/default/user/admin_index/index.html
+++ b/public/themes/admin/default/user/admin_index/index.html
@@ -15,7 +15,7 @@
         <input type="submit" class="btn btn-primary" value="搜索"/>
         <a class="btn btn-danger" href="{:url('user/adminIndex/index')}">清空</a>
 
-        <a class="btn btn-primary pull-right" href="{:url('user/adminIndex/index')}">导出</a>
+        <a class="btn btn-primary pull-right" href="{:url('admin/Excel/exportUser')}">导出</a>
     </form>
     <form method="post" class="js-ajax-form">
         <table class="table table-hover table-bordered">
