--- a/public/themes/admin/default/admin/statistics/wish.html
+++ b/public/themes/admin/default/admin/statistics/wish.html
@@ -30,9 +30,8 @@
         </if>
         <input type="hidden" name="status" value="{$status}">
         <input type="submit" class="btn btn-primary" value="搜索"/>
-        <if condition="$status eq 1">
-           <a class="btn btn-primary pull-right" href="{:url('Excel/exportWish')}">导出</a>
-        </if>
+        
+        <a class="btn btn-primary pull-right" href="{:url('Excel/exportWish')}">导出</a>
     </form>
     <form class="js-ajax-form" action="" method="post">
         <if condition="$status eq 0">
@@ -61,7 +60,7 @@
                             </a>
                         </notempty>
                         </td>
-                        <td>{:date('Y-m-d H:i', $vo.create_time)}</td>
+                        <td>{:date('Y-m-d H:i', $vo.published_time)}</td>
                         <td>未认领</td>
                     </tr>
                 </foreach>
