--- a/public/themes/mobile/default/portal/memory.html
+++ b/public/themes/mobile/default/portal/memory.html
@@ -44,6 +44,10 @@
                     <input type="hidden" id="page" value="1">
                     <ul class="mui-table-view mui-table-view-chevron" id="list">
                     </ul>
+                    <div class="empty-data" id="empty-data">
+                        <img src="__TMPL__/public/assets/images/ulove-empty-data-img.png" alt="">
+                        <p>还没有内容呢</p>
+                    </div>
                 </div>
             </div>
             <!--页面主内容区结束-->
@@ -127,6 +131,7 @@
                     window.page = data.data.page;
                     mui.toast("加载了" + data.data.size + "条记录");
                 } else {
+                    document.getElementById('empty-data').style.display = 'block';
                     mui('#pullrefresh').pullRefresh().endPullupToRefresh(true);
                     mui.toast(data.msg);
                 }
